design Verbesserungen header, home, FAQ, Galerie

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -8,7 +8,7 @@
 
   "home": {
     "aboutMe": "ÜBER MICH",
-    "aboutMeText": "Hallo, ich bin Caro und im Alter von 19 Jahren habe ich das Tätowieren für mich entdeckt. Seit dem darf ich dieser wundervollen Berufung nachgehen, die Haut von Menschen mit Tattoos verzieren und so ihrer inneren Welt Ausdruck verleihen. Mit der Liebe zum Detail kreiere ich zarte Fineline Motive und fotorealistische Tattoos, diese auch gerne in farbig. Lass dich gerne inspirieren von meiner bisherigen Arbeit und vielleicht sehen wir uns bald zu deinem eigenen Tattootermin. Ich würde mich freuen!",
+    "aboutMeText": "Hallo, ich bin Caro und im Alter von 19 Jahren habe ich das Tätowieren für mich entdeckt. Seit dem darf ich dieser wundervollen Berufung nachgehen, die Haut von Menschen mit Tattoos verzieren und so ihrer inneren Welt Ausdruck verleihen. Mit der Liebe zum Detail kreiere ich zarte Fineline Motive und fotorealistische Tattoos, diese auch gerne in farbig. Ich würde mich freuen dich begrüßen zu dürfen!",
     "theStudio": "DAS STUDIO",
     "theStudioText": "Seit November 2022 tätowiere ich im privaten Tattoo Atelier ‚ART CONCEPT‘ von Saby (@sabyminaart), welches in Berlin-Friedrichshagen, nahe der Bölschestraße, liegt. Das Studio bietet eine private und gemütliche Atmosphäre, in der du dich ganz wohl und heimisch fühlen darfst. Hier haben wir auch einen separaten Raum für deinen Tattootermin, sodass wir uns frei und ungestört auf dich und dein Tattoo fokussieren können.",
     "myStyle": "MEIN STIL",
