--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -8,11 +8,11 @@
 
   "home": {
     "aboutMe": "ABOUT ME",
-    "aboutMeText": "Hello, I'm Caro and I discovered tattooing at the age of 19. Since then, I have been able to pursue this wonderful calling of decorating people's skin with tattoos and thus expressing their inner world. With attention to detail, I create delicate fineline motifs and photorealistic tattoos, also in color. Let yourself be inspired by my previous work and maybe we'll see each other soon for your own tattoo appointment. I would be happy!",
+    "aboutMeText": "Hello, I'm Caro and I discovered tattooing at the age of 19. Since then, I have been able to pursue this wonderful calling of decorating people's skin with tattoos and thus expressing their inner world. With attention to detail, I create delicate fineline motifs and photorealistic tattoos, also in color. I would be happy to welcome you!",
     "theStudio": "THE STUDIO",
-    "theStudioText": "Since November 2022 I have been tattooing in Saby (@sabyminaart's) private tattoo studio 'ART CONCEPT', which is located in Berlin-Friedrichshagen, near Bölschestraße. The studio offers a private and cozy atmosphere in which you can feel completely comfortable and at home. Here we also have a separate room for your tattoo appointment, so that we can focus on you and your tattoo freely and undisturbed.",
+    "theStudioText": "Since November 2022 I have been tattooing in Saby's (@sabyminaart) private tattoo studio 'ART CONCEPT', which is located in Berlin-Friedrichshagen. In a private room with a cozy atmosphere, you can feel completely comfortable and at home.",
     "myStyle": "MY STYLE",
-    "myStyleText": "Seit November 2022 tätowiere ich im privaten Tattoo Atelier ‚ART CONCEPT‘ von Saby (@sabyminaart), welches in Berlin-Friedrichshagen, nahe der Bölschestraße, liegt. Das Studio bietet eine private und gemütliche Atmosphäre, in der du dich ganz wohl und heimisch fühlen darfst. Hier haben wir auch einen separaten Raum für deinen Tattootermin, sodass wir uns frei und ungestört auf dich und dein Tattoo fokussieren können."
+    "myStyleText": "Seit November 2022 tätowiere ich im privaten Tattoo Atelier ‚ART CONCEPT‘ von Saby (@sabyminaart), welches in Berlin-Friedrichshagen, nahe der Bölschestraße, liegt. Das Studio bietet eine private und gemütliche Atmosphäre, in der du dich ganz wohl und heimisch fühlen darfst. Hier haben wir auch einen separaten Raum für deinen Tattootermin."
 
   },
 
